--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
 }
 
 android {
+    namespace 'oracoes.e.promessas'
     compileSdk 33
 
     defaultConfig {
@@ -30,7 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    namespace 'oracoes.e.promessas'
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
