--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.OraçõesPromessas">
         <activity
             android:screenOrientation="portrait"
-            android:name=".SplashScreenActivity"
+            android:name="SplashScreenActivity"
             android:exported="true"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
@@ -23,15 +23,15 @@
         </activity>
 
         <activity
-            android:name=".MainActivity"
+            android:name="oracoes.e.promessasnew.MainActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".Pedido_a_Santa_Rita"
+            android:name="oracoes.e.promessasnew.Pedido_a_Santa_Rita"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:name=".Oracao_do_Pai_Nosso"
+            android:name="oracoes.e.promessasnew.Oracao_do_Pai_Nosso"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
     </application>
