--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,15 @@ plugins {
 
 android {
     namespace 'oracoes.e.promessasnew'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "oracoes.e.promessasnew"
         minSdk 16
-        targetSdk 33
-        versionCode 1
-        versionName "1"
+        //noinspection EditedTargetSdkVersion
+        targetSdk 34
+        versionCode 2
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -37,9 +38,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
